refactor(domain): WinningLotto 적용에 따른 계산 및 서비스 로직 리팩터링